--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,17 @@ TODO list:
 - Implement arrays.
 - For greg: design the file i/o abstraction layer.
 - For ryan: finish coversion, math, and time/date functions.
+- debug the ASM code. Yikes. Maybe move it into an inline
+   function in OnEvents.c ...
+- Make universal header file which include all individual BASIClib
+   headers.
+- Make an init.c and init.h, with function that calls all
+   existing __initXXX() functions in BASIClib.
+- Start developing a portable, clean, test program that alerts us to
+   errors in expected BASIClib functionality. We'll really need this
+   if we start porting to other platforms, but this is important for
+   initial debugging, too.
 - Write the !@#$ing thing.
-- debug the ASM code. Yikes.
 - ...and much, much more.
 
 
