--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,12 @@
 TODO list:
 
 - Examine the "!!!" and "***" comments in the source.
-- Implement arrays.
+- Implement BASIC arrays.
 - For greg: design the file i/o abstraction layer.
-- For ryan: finish coversion, math, and time/date functions.
+- For ryan: finish conversion, math, and time/date functions.
 - debug the ASM code. Yikes. Maybe move it into an inline
    function in OnEvents.c ...
-- Make an init.c and init.h, with function that calls all
-   existing __initXXX() functions in BASIClib.
+- Write a Makefile.
 - Start developing a portable, clean, test program that alerts us to
    errors in expected BASIClib functionality. We'll really need this
    if we start porting to other platforms, but this is important for
