--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,12 @@
-
 TODO list:
 
 - Examine the "!!!" and "***" comments in the source.
 - Implement BASIC arrays.
 - For greg: design the file i/o abstraction layer.
 - For ryan: finish conversion, math, and time/date functions.
+- For ryan: finish On event handling. Ugh.
+- For ryan: write internal string functions.
+- For the daring: See how gcc for win32 like this code.  :)
 - debug the ASM code. Yikes. Maybe move it into an inline
    function in OnEvents.c ...
 - Write a Makefile.
@@ -12,6 +14,7 @@ TODO list:
    errors in expected BASIClib functionality. We'll really need this
    if we start porting to other platforms, but this is important for
    initial debugging, too.
+- Design full, detailed  timetable.
 - Write the !@#$ing thing.
 - ...and much, much more.
 
