--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -5,9 +5,8 @@ TODO list:
 - For greg: design the file i/o abstraction layer.
 - For ryan: finish conversion, math, and time/date functions.
 - For ryan: finish On event handling. Ugh.
-- For ryan: write internal string functions.
 - For ryan: write thread protection.
-- For the daring: See how gcc for win32 like this code.  :)
+- For the daring: See how gcc for win32 likes this code.  :)
 - debug the ASM code. Yikes. Maybe move it into an inline
    function in OnEvents.c ...
 - Write a Makefile.
