--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,7 @@
 TODO list:
 
+- Make __registerOnEventHandler() figure stack locations from registers more,
+   so OnEvents can be registered in functions that have void parameters.
 - Find good way to generate dependencies.
 - Examine the "!!!" and "***" comments in the source.
 - RESUME 0 returns to statement that threw error. Ugh!
