--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,6 @@
 TODO list:
 
+- Streamline makefiles. Most of it is just duplication.
 - Make __registerOnEventHandler() figure stack locations from registers more,
    so OnEvents can be registered in functions that have void parameters.
 - Find good way to generate dependencies.
