--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -4,8 +4,8 @@ TODO list:
 - Make __registerOnEventHandler() figure stack locations from registers more,
    so OnEvents can be registered in functions that have void parameters.
 - Find good way to generate dependencies.
-- Examine the "!!!" and "***" comments in the source.
-- RESUME 0 returns to statement that threw error. Ugh!
+- Examine the "!!!" comments in the source.
+- RESUME (RESUME 0) returns to statement that threw error. Ugh!
 - GOSUB/RETURN support.
 - Implement BASIC arrays.
 - DON'T FORGET TO WRITE TESTLIB CODE FOR ALL IMPORTANT FUNCTIONS!
