--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,9 +1,11 @@
 TODO list:
 
 - Make current BASIClib code use the boxcar system, where applicable.
+- Rewrite testlib code to use new name-mangling scheme.
 - HOWTO on adding new modules to BASIClib.
 - RESUME NEXT recursive testing.
 - Testlib code for boxcar system.
+- Catch up testlib, in general.
 - Documentation: mem_management.txt and on_events.txt
 - Streamline makefiles. Most of it is just duplication.
 - Find good way to generate dependencies.
