--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,6 @@
 TODO list:
 
+- Complete console drivers.
 - Catch up testlib, in general.
 - Move RANDOMIZE and RND from MathFunctions to a new module
   (RandomNumberFunctions) ?
