--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,10 @@
 TODO list:
 
+- change intrinsics types (int to __integer) in all API functions.
+- Move signal handlers to Initialize module...
+- Write signal handlers...
+- Update MemoryManager boxcar object routines...
+- does __deregisterOnEventHandlers() deregister current handler?
 - update STANDALONE sections in testlib...
 - update name scheme in test_* functions in testlib...
 - Check (and update) copyright headers in each file...
