--- a/BASIClib/vbslacker.lang
+++ b/BASIClib/vbslacker.lang
@@ -6,8 +6,8 @@
 #
 # If you are translating to a new language, do this:
 #
-#  1. Ask yourself, "Do I have a good grasp of BASIC to understand
-#     this file, and what it's purpose is? Do I have sufficient translating
+#  1. Ask yourself, "Do I have a good enough grasp of BASIC to understand
+#     this file, and what its purpose is? Do I have sufficient translating
 #     skills? Do I have the ethics to NOT put naughty words that the
 #     BASIClib maintainers will not understand in here?" If you answered
 #     "no" to any of these questions, stop now.
